--- a/app/public/sass/style.scss
+++ b/app/public/sass/style.scss
@@ -10,6 +10,12 @@ body {
     max-width: 100%;
   }
 
+.donation-type-div{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+
   h1 {
     text-align: center;
     text-transform: uppercase;
