thanks form implemented successfully

--- a/app/views/partials/content/donateContent.ejs
+++ b/app/views/partials/content/donateContent.ejs
@@ -5,7 +5,7 @@
 
     <div class="donation-type-div">
       <h2>Donation</h2>
-      <form class="donation-type-form" action="#" method="post">
+      <form class="donation-type-form" action="/thanks" method="post">
         <input type="radio" name="Donation" value="Monthly" checked="true">Monthly<br>
         <input type="radio" name="Donation" value="Once">Once<br>
         <input type="radio" name="Donation" value="Yearly">Yearly<br>
