working facebook login

--- a/app/views/partials/content/thanksContent.ejs
+++ b/app/views/partials/content/thanksContent.ejs
@@ -2,3 +2,4 @@
   <p>thanks <%= name %></p>
   <p>email  : <%= email %></p>
   <p>delivered : <%= delivered %><span class = "mail-delivery-status"></span></p>
+  <a href="/login">login here</a>
