--- a/app/views/partials/content/contactContent.ejs
+++ b/app/views/partials/content/contactContent.ejs
@@ -1,21 +1,26 @@
 <div class="inside-container">
-  <form id="contact" action="" method="post">
+  <!-- <form id="contact" action="/contact/send" method="post"> -->
+  <div class="form-style">
+
     <h3>Contact Us</h3>
     <h4>We are always here to listen from you</h4>
     <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+      <input placeholder="Your name" type="text" tabindex="1" id="Name" required autofocus>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Email Address" type="email" tabindex="2" required>
+      <input placeholder="Your Email Address" type="email" tabindex="2" id="Email" name="email"required>
     </fieldset>
     <fieldset>
       <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
     </fieldset>
     <fieldset>
-      <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+      <textarea placeholder="Type your Message Here...." tabindex="5" id="Message" name="message" required></textarea>
     </fieldset>
     <fieldset>
       <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
     </fieldset>
-  </form>
+
+  </div>
+    <div class="text-container"><span class="result-span" id='Result'></span><a href="/"  id ="text-container-link" style = "display:none">Homepage</a></div>
+  <!-- </form> -->
 </div>
