mongo donation insertions

--- a/app/views/partials/content/donateContent.ejs
+++ b/app/views/partials/content/donateContent.ejs
@@ -17,11 +17,11 @@
       <h2>Contribution</h2>
       <!-- <form class="donation-amount-form" action="#" method="post"> -->
         <h3>select an amount</h3>
-        <input type="radio" name="Donation-amount" value="10">10<br>
-        <input type="radio" name="Donation-amount" value="20">20<br>
-        <input type="radio" name="Donation-amount" value="50">50<br>
-        <input type="radio" name="Donation-amount" value="100">100<br>
-        <input type="radio" name="Donation-amount" value="other">other
+        <input type="radio" name="DonationAmount" value="10">10<br>
+        <input type="radio" name="DonationAmount" value="20">20<br>
+        <input type="radio" name="DonationAmount" value="50">50<br>
+        <input type="radio" name="DonationAmount" value="100">100<br>
+        <input type="radio" name="DonationAmount" value="other">other
         <input type="text" name="miscellaneousDonation">
 
     </div>
