--- a/app/views/partials/content/profileContent.ejs
+++ b/app/views/partials/content/profileContent.ejs
@@ -1,19 +1,18 @@
-<p>this is the profile page </p>
 <p>
 ID: <%= user.id %><br/>
-Username: <%= user.username %><br/>
-Name: <%= user.displayName %><br/>
-<% if (user.emails) { %>
-Email: <%= user.emails[0].value %><br/>
+Name: <%= user.name %><br/>
+<% if (user.email) { %>
+Email: <%= user.email %><br/>
 <% } %>
 <% if (user.photos) { %>
 Photos: <br/>
-<img src= <%= user.photos[0].value %> ></img>
+<img src= <%= user.photos %> ></img>
 <% } %>
 <% if (user.hometown) { %>
-hometown: <%= user.hometown%><br>
-<% } %>
-<% if (user.location) { %>
-  hometown: <%= user.location%><br>
+  hometown: <%= user.hometown%><br>
   <% } %>
+  <% if (user.location) { %>
+    hometown: <%= user.location%><br>
+    <% } %>
+
 </p>
