--- a/app/views/partials/template/welcome-email/html.ejs
+++ b/app/views/partials/template/welcome-email/html.ejs
@@ -17,8 +17,8 @@
     <img src="cid:uniqueMailImage" alt="image">
 
     <div class="all-para">
-    <p>Dear Amarjot</p>
-    <p class="first-para">Thank you for your donation to Save Wild Life Fund!. Your gift of $50 to WWF helps support our global conservation efforts.</p>
+    <p>Dear Contributor,</p>
+    <p class="first-para">Thank you for your donation to Save Wild Life Fund!. Your gift to WWF helps support our global conservation efforts.</p>
     <p>We are deeply grateful for your generosity and support of our conservation efforts. You are helping us protect the future of nature!</p>
     <p>Once again, thank you for your support</p>
     <p class="sincerely">Sincerely,</p>
