--- a/app/views/partials/content/contactContent.ejs
+++ b/app/views/partials/content/contactContent.ejs
@@ -5,13 +5,13 @@
     <h3>Contact Us</h3>
     <h4>We are always here to listen from you</h4>
     <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" id="Name" required autofocus>
+      <input placeholder="Your name" type="text" tabindex="1" id="Name" name="name" required autofocus>
     </fieldset>
     <fieldset>
       <input placeholder="Your Email Address" type="email" tabindex="2" id="Email" name="email"required>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+      <input placeholder="Your Phone Number" type="tel" tabindex="3" name="phone" required>
     </fieldset>
     <fieldset>
       <textarea placeholder="Type your Message Here...." tabindex="5" id="Message" name="message" required></textarea>
