corrected the country and province and city

--- a/app/public/sass/style.scss
+++ b/app/public/sass/style.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);
 
 //this is the donate form styles
-body-donate{
+.body-donate{
   max-width: 1600px;
   margin: auto;
   font-size: 1rem;
