--- a/app/views/partials/template/defaultjs.ejs
+++ b/app/views/partials/template/defaultjs.ejs
@@ -1,2 +1,3 @@
 <script src= "/js/jquery-3.2.1.js"></script>
 <script src= "/js/main.js"></script>
+<script src="//geodata.solutions/includes/countrystatecity.js"></script>
