--- a/app/public/sass/style.scss
+++ b/app/public/sass/style.scss
@@ -1,30 +1,48 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);
+@import url( 'https://fonts.googleapis.com/css?family=Merriweather:400,400i|Open+Sans:400,600,700');
 
-//this is the donate form styles
-body-donate{
-  max-width: 1600px;
+
+
+
+
+
+
+//this is the donate form styles///////////////////////////////////
+.body-donate {
+  max-width: 1500px;
   margin: auto;
   font-size: 1rem;
-  font-family: georgia,"times new roman";
+  font-family: "Merriweather","times new roman",serif;
 
   img {
     height: auto;
     max-width: 100%;
   }
 
-.donation-type-div{
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-}
+  .donation-type-div {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-around;
+
+    .donation-type-form {
+      flex: 0 1 25%;
+    }
+  }
 
   h1 {
     text-align: center;
     text-transform: uppercase;
     font-size: 3rem;
-    color: indianred;
+    color: white;
     margin-top: 0;
     padding-top: 0;
+    font-family: "Open Sans",sans-serif;
+  }
+  h2{
+    font-size: 3rem;
+  }
+  h3{
+    font-size: 1.5rem;
   }
 
   input,
@@ -35,19 +53,65 @@ body-donate{
   header {
     padding: 3% 0;
     background-color: rgb(162, 212, 56);
+    background-color: black;
+    color: white;
+    line-height: 1.5;
+    text-align: center;
+
+    h1 {
+      margin: 0;
+      padding: 0;
+      font-size: 4rem;
+    }
   }
 
-    .container> div {
+  .donation-amount-div {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+  }
+
+  .container > div {
     border: 1px solid grey;
     margin: auto;
     max-width: 50%;
     margin: 5% auto;
     padding: 3% 10%;
+
+    .donation-type-div {
+      margin-top: 0;
+    }
   }
 
-  .personal-info> div {
+  .container div:first-of-type {
+    border: 0;
+  }
+
+  .personal-info > div {
     border: 1px solid grey;
     margin: auto;
+  }
+
+  .personal-info {
+    .payment-option-div {
+      border: 0;
+      margin-top: 10%;
+    }
+
+    .address-div {
+      .address-text {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: stretch;
+        margin: 3% auto;
+
+        .address-input {
+          flex: 0 1 82%;
+        }
+      }
+    }
   }
 
   input[type="reset"],
@@ -55,170 +119,371 @@ body-donate{
     margin-right: 5%;
     padding: 0.5rem 1rem;
     color: white;
-    background-color: rgb(162, 212, 56);
+    background-color: goldenrod;
     border: 0;
   }
 
   input[type="reset"] {
     margin-right: 0;
   }
+
+  footer {
+    background-color: black;
+  }
+
+  .fullbleed-section .title-div {
+    text-align: center;
+
+    h1 {
+      color: black;
+      font-size: 4rem;
+      margin: 2rem auto 1rem;
+    }
+
+    p {
+      max-width: 75ch;
+      margin: auto;
+      line-height: 1.5;
+    }
+  }
 }
 
-
-// this is the contact form styles
-
-.body-contact{
-
-  font-family:"Open Sans", Helvetica, Arial, sans-serif;
-  font-weight:300;
-  font-size: 12px;
-  line-height:30px;
-  color:#777;
-  background:#0CF;
-
-  * {
-	margin:0;
-	padding:0;
-	box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-webkit-font-smoothing:antialiased;
-	-moz-font-smoothing:antialiased;
-	-o-font-smoothing:antialiased;
-	font-smoothing:antialiased;
-	text-rendering:optimizeLegibility;
-}
-
-
-
-.inside-container {
-	max-width:400px;
-	width:100%;
-	margin:0 auto;
-	position:relative;
-}
-
-.form-style input[type="text"],
- .form-style input[type="email"],
-  .form-style input[type="tel"],
-   .form-style textarea,
-    .form-style button[type="submit"] {
-       font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif;
+@media screen and (max-width: 800px) {
+    .body-donate {
+        // background-color: lightblue;
+        .container > div{
+          max-width: 95%;
+          box-sizing: border-box;
+          padding: 3% 2%;
+          display: block;
+          h2,h3{
+            text-align: center;
+          }
+          h2{
+            font-size: 2.5rem;
+          }
+          h3{
+            font-size: 1.5rem;
+          }
+          .payment-option-div{
+                margin-bottom: 5%;
+          }
+          .payment-option-div .button-div{
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: nowrap;
+            margin: 5% auto;
+          }
+        }
+        .container {
+          .donation-type-div{
+            display: block;
+          }
+        .donation-amount-div{
+          display: block;
+        }
       }
 
-.form-style {
-	background:#F9F9F9;
-	padding:25px;
-	margin:50px 0;
+
+        input[type="reset"],
+        input[type="submit"] {
+          line-height: 2.5;
+          padding: 0% 15%;
+        }
+      .fullbleed-section{
+        .title-div{
+          padding: 0% 2%;
+          h1{
+            font-size: 3rem;
+          }
+        }
+      }
+    }
 }
 
-.form-style h3 {
-	color: #F96;
-	display: block;
-	font-size: 30px;
-	font-weight: 400;
-}
 
-.form-style h4 {
-	margin:5px 0 15px;
-	display:block;
-	font-size:13px;
-}
 
-fieldset {
-	border: medium none !important;
-	margin: 0 0 10px;
-	min-width: 100%;
-	padding: 0;
-	width: 100%;
-}
 
-.form-style input[type="text"],
- .form-style input[type="email"],
-  .form-style input[type="url"],
-   .form-style textarea {
-	width:100%;
-	border:1px solid #CCC;
-	background:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-}
 
-.form-style input[type="text"]:hover,
- .form-style input[type="email"]:hover,
-  .form-style input[type="tel"]:hover,
-   .form-style textarea:hover {
-	-webkit-transition:border-color 0.3s ease-in-out;
-	-moz-transition:border-color 0.3s ease-in-out;
-	transition:border-color 0.3s ease-in-out;
-	border:1px solid #AAA;
-}
 
-.form-style textarea {
-	height:100px;
-	max-width:100%;
-  resize:none;
-}
 
-.form-style button[type="submit"] {
-	cursor:pointer;
-	width:100%;
-	border:none;
-	background:#0CF;
-	color:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-	font-size:15px;
-}
 
-.form-style button[type="submit"]:hover {
-	background:#09C;
-	-webkit-transition:background 0.3s ease-in-out;
-	-moz-transition:background 0.3s ease-in-out;
-	transition:background-color 0.3s ease-in-out;
-}
 
-.form-style button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
 
-.form-style input:focus, .form-style textarea:focus {
-	outline:0;
-	border:1px solid #999;
-}
 
-.result-span{
+
+
+
+
+
+// this is the contact form styles//////////////////////////////////////////////////////////
+.body-contact {
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
   color: black;
-  font-size: 1rem;
-  display: block;
-  background-color: white;
-  // padding: 2%;
-  font-weight: bold;
-}
+  margin: auto;
+  max-width: 1500px;
+  // border: 1px solid blue;
+  // background:#0CF;
+  img {
+    height: auto;
+    max-width: 100%;
+  }
 
-.text-container a{
-  display: block;
-  text-decoration: none;
-  color: #f96;
-  background-color: white;
-  font-weight: bold;
-  font-size: 1.25rem;
-  text-align: center;
-  line-height: 2.5;
-  margin: 3% auto;
-  box-shadow: 1px 1px 1px grey;
-  text-transform: uppercase;
-}
+  h1 {
+    font-size: 4rem;
+  }
 
-::-webkit-input-placeholder {
- color:#888;
-}
-:-moz-placeholder {
- color:#888;
-}
-::-moz-placeholder {
- color:#888;
-}
-:-ms-input-placeholder {
- color:#888;
-}
+  footer,
+  header {
+    background-color: black;
+    color: white;
+    text-align: center;
+  }
 
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    -o-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+  }
+  // .inside-container {
+  // 	max-width:400px;
+  // 	width:100%;
+  // 	margin:0 auto;
+  // 	position:relative;
+  // }
+
+  .form-style button[type="submit"],
+  .form-style input[type="email"],
+  .form-style input[type="tel"],
+  .form-style input[type="text"],
+  .form-style textarea {
+    font: 400 12px/16px "Open Sans", Helvetica, Arial, sans-serif;
+  }
+
+  .form-style {
+    background: goldenrod;
+    padding: 25px;
+    line-height: 30px;
+    // margin:50px 0;
+    // border: 1px solid red;
+  }
+
+  .form-style h3 {
+    color: #F96;
+    display: block;
+    font-size: 30px;
+    font-weight: 400;
+  }
+
+  .form-style h4 {
+    margin: 5px 0 15px;
+    display: block;
+    font-size: 13px;
+  }
+
+  fieldset {
+    border: medium none !important;
+    margin: 0 0 10px;
+    min-width: 100%;
+    padding: 0;
+    width: 100%;
+  }
+
+  .form-style input[type="email"],
+  .form-style input[type="text"],
+  .form-style input[type="url"],
+  .form-style textarea {
+    width: 100%;
+    border: 1px solid #CCC;
+    background: #FFF;
+    margin: 0 0 5px;
+    padding: 10px;
+  }
+
+  .form-style input[type="email"]:hover,
+  .form-style input[type="tel"]:hover,
+  .form-style input[type="text"]:hover,
+  .form-style textarea:hover {
+    -webkit-transition: border-color 0.3s ease-in-out;
+    -moz-transition: border-color 0.3s ease-in-out;
+    transition: border-color 0.3s ease-in-out;
+    border: 1px solid #AAA;
+  }
+
+  .form-style textarea {
+    height: 100px;
+    max-width: 100%;
+    resize: none;
+  }
+
+  .form-style button[type="submit"] {
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    background: black;
+    color: #FFF;
+    margin: 0 0 5px;
+    padding: 10px;
+    line-height: 2.5;
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .form-style button[type="submit"]:hover {
+    background: #09C;
+    -webkit-transition: background 0.3s ease-in-out;
+    -moz-transition: background 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
+  }
+
+  .form-style button[type="submit"]:active {
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+  }
+
+  .form-style input:focus,
+  .form-style textarea:focus {
+    outline: 0;
+    border: 1px solid #999;
+  }
+
+  .result-span {
+    color: #000;
+    font-size: 16px;
+    font-size: 1rem;
+    padding-top: 2rem;
+    display: block;
+    background-color: #fff;
+  }
+
+  .text-container a {
+    display: block;
+    text-decoration: none;
+    background-color: white;
+    font-weight: bold;
+    font-size: 1.25rem;
+    text-align: center;
+    line-height: 2.5;
+    margin: 3% auto;
+    box-shadow: 1px 1px 1px grey;
+    text-transform: uppercase;
+    display: block;
+    border: 1px solid goldenrod;
+    color: black;
+  }
+
+  ::-webkit-input-placeholder {
+    color: #888;
+  }
+
+  :-moz-placeholder {
+    color: #888;
+  }
+
+  ::-moz-placeholder {
+    color: #888;
+  }
+
+  :-ms-input-placeholder {
+    color: #888;
+  }
+
+  .outer-div {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    margin-bottom: 8%;
+  }
+
+  .left-div {
+    flex: 0 1 35%;
+
+    h2 {
+      font-size: 3rem;
+      margin: 1.5rem auto;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.5;
+      margin: 2% auto 5%;
+      max-width: 75ch;
+    }
+  }
+
+  .right-div {
+    flex: 0 1 50%;
+
+    h2 {
+      font-size: 3rem;
+      margin: 1.5rem auto;
+    }
+
+    h3 {
+      font-size: 1rem;
+      font-weight: normal;
+      line-height: 1.5;
+      margin-bottom: 1%;
+    }
+  }
+
+  .title-div {
+    margin: 5% auto;
+    text-align: center;
+
+    h1 {
+      font-size: 4rem;
+      margin: 2rem auto;
+    }
+
+    p {
+      max-width: 75ch;
+      text-align: center;
+      line-height: 1.5;
+      margin: 0.5rem auto;
+    }
+
+    .address-div {
+      margin: 2% auto;
+      font-weight: bold;
+
+      p {
+        span {
+          padding: 0 2%;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 800px) {
+  .body-contact {
+    .outer-div {
+      display: block;
+      text-align: center;
+      margin-top: 10%;
+    }
+
+    .right-div {
+      margin-top: 10%;
+    }
+
+    .form-style {
+      max-width: 95%;
+      text-align: left;
+      margin: auto;
+    }
+
+    .text-container a {
+      max-width: 95%;
+    }
+  }
 }
