--- a/app/views/partials/content/contactContent.ejs
+++ b/app/views/partials/content/contactContent.ejs
@@ -1,9 +1,38 @@
 <div class="inside-container">
   <!-- <form id="contact" action="/contact/send" method="post"> -->
+  <div class="fullbleed-div">
+    <img src="\images\image2.jpg" alt="teaser image">
+  </div>
+  <div class="title-div">
+    <h1>Contact Page </h1>
+    <p>If you have an enquiry and would like to discuss with us, we are looking forward to speak with you. Please feel free to contact us in the most convenient way for you either using the details or by filling out the contact form.</p>
+    <p>We always like to return your query in person over the phone so we can understand your queries in better way. To make this possible, whenever you send us query please  include your telephone number and we will be in touch as soon as possible.</p>
+    <div class="address-div">
+      <p>1000 Beach Avenue , Vancouver</p>
+      <p><span>Call </span>911.911.9191</p>
+      <p>info@savewild.com</p>
+      <p>Mon - Fri</p>
+      <p>9 am - 9 pm</p>
+
+
+    </div>
+  </div>
+  <div class="outer-div">
+  <div class="left-div">
+    <h2>Don't be shy</h2>
+    <div class="left-img-div">
+      <img src="\images\image1.jpg" alt="article image">
+    </div>
+    <div class="left-text-div">
+      <p>Meet this owl, his name is Henry. Occasionally he would come and sit beside the window of our office. He will stay there for whole night and leave in the morning without saying anything. After observing this for extended period of time, Amarjot decided to give a snack to this owl from his daily lunchbox. So, as planned, he opened the window and put some ham in front of him. Owl immediatly ate the ham. This series of actions happend multiple times in future. In short, we care about living beings. so please don't be shy to contact us, if you have any enquiry.</p>
+    </div>
+  </div>
+  <div class="right-div">
+
+    <h2>Contact Us</h2>
+    <h3>We are always here to listen from you</h3>
   <div class="form-style">
 
-    <h3>Contact Us</h3>
-    <h4>We are always here to listen from you</h4>
     <fieldset>
       <input placeholder="Your name" type="text" tabindex="1" id="Name" name="name" required autofocus>
     </fieldset>
@@ -23,4 +52,7 @@
   </div>
     <div class="text-container"><span class="result-span" id='Result'></span><a href="/"  id ="text-container-link" style = "display:none">Homepage</a></div>
   <!-- </form> -->
+</div>
+
+</div>
 </div>
