--- a/app/views/partials/content/loginContent.ejs
+++ b/app/views/partials/content/loginContent.ejs
@@ -1,6 +1,54 @@
-<p>this is the common login page<p>
-  <% if(!user) {%>
-<a href="/login/facebook">login to facebook</a>
-<% } else {%>
-  <p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p>
-<% } %>
+
+
+<div class="body-content">
+  <div class="full-bleed">
+    <img src="images/image3.jpg" alt="">
+  </div>
+  <div class="main-article-div">
+    <article>
+      <h2>Thanks for Donation</h2>
+      <div class="section-div">
+
+        <section class="img-section">
+          <img src="images/image2.jpg" alt="">
+        </section>
+        <section class="text-section">
+          <p>Thanks
+              <span>
+                <% if (typeof name === 'undefined' || name === null) { %>
+                    <span>Contributor</span>
+                  <% }else { %>
+                          <span><%= name %></span>
+                  <% } %>
+              </span>
+             for your contribution toward the preservation and re-establishment of crucial habitat vitally needed to sustain healthy population of numerous wildlife species.</p>
+          <% if(!user) {%>
+            <span class="signin-span">
+            <a href="/login/facebook">login to facebook</a>
+          </span>
+            <% } else {%>
+              <p>Hello, <%= user.name %>. View your <a href="/profile">profile</a>.</p>
+              <% } %>
+
+        </section>
+      </div>
+    </article>
+  </div>
+  <div class="small-teaser-div">
+    <h2>We Care</h2>
+    <div class="small-img">
+      <div class="small-img-div">
+        <img src="images/image8.jpg" alt="">
+      </div>
+
+      <div class="small-img-div">
+        <img src="images/image9.jpg" alt="">
+      </div>
+
+      <div class="small-img-div">
+        <img src="images/image12.jpg" alt="">
+      </div>
+
+    </div>
+  </div>
+</div>
