--- a/app/views/partials/content/profileContent.ejs
+++ b/app/views/partials/content/profileContent.ejs
@@ -1,18 +1,64 @@
-<p>
-ID: <%= user.id %><br/>
-Name: <%= user.name %><br/>
-<% if (user.email) { %>
-Email: <%= user.email %><br/>
-<% } %>
-<% if (user.photos) { %>
-Photos: <br/>
-<img src= <%= user.photos %> ></img>
-<% } %>
-<% if (user.hometown) { %>
-  hometown: <%= user.hometown%><br>
-  <% } %>
-  <% if (user.location) { %>
-    hometown: <%= user.location%><br>
-    <% } %>
 
-</p>
+
+<div class="body-content">
+  <div class="full-bleed">
+    <img src="images/image3.jpg" alt="">
+  </div>
+  <div class="main-article-div">
+    <article>
+      <h2>Thanks for Donation</h2>
+      <div class="section-div">
+
+        <section class="img-section">
+          <img src="images/image2.jpg" alt="">
+        </section>
+        <section class="text-section">
+          <p>Thanks
+              <span>
+                <% if (typeof name === 'undefined' || name === null) { %>
+                    <span>Contributor</span>
+                  <% }else { %>
+                          <span><%= name %></span>
+                  <% } %>
+              </span>
+             for your contribution toward the preservation and re-establishment of crucial habitat vitally needed to sustain healthy population of numerous wildlife species.</p>
+
+             <div class="profile-div">
+               <div class="pic-div">
+                 <% if (user.photos) { %>
+                 <img src= <%= user.photos %> alt="profilepic"></img>
+                 <% } %>
+
+               </div>
+               <div class="info-div">
+                 <span>Name: <%= user.name %></span>
+                 <span>
+                   <% if (user.email) { %>
+                 Email: <%= user.email %><br/>
+                 <% } %>
+               </span>
+               </div>
+             </div>
+
+        </section>
+      </div>
+    </article>
+  </div>
+  <div class="small-teaser-div">
+    <h2>We Care</h2>
+    <div class="small-img">
+      <div class="small-img-div">
+        <img src="images/image8.jpg" alt="">
+      </div>
+
+      <div class="small-img-div">
+        <img src="images/image9.jpg" alt="">
+      </div>
+
+      <div class="small-img-div">
+        <img src="images/image12.jpg" alt="">
+      </div>
+
+    </div>
+  </div>
+</div>
